{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 27,
  "lineage": "9294af01-5e30-fb11-feca-e15150a50f9c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085925f297f89fce1",
            "arn": "arn:aws:ec2:us-east-1:678793045153:instance/i-066cc7f80390da2fe",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066cc7f80390da2fe",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dfd9fb8a731c4374",
            "private_dns": "ip-172-31-54-90.ec2.internal",
            "private_ip": "172.31.54.90",
            "public_dns": "ec2-3-85-16-170.compute-1.amazonaws.com",
            "public_ip": "3.85.16.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e6e960fff4d58e27",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh",
              "acesso-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bc313d82",
            "tags": {
              "Name": "dev0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b1ee5863bd704abb",
              "sg-0ed73ba77e966e07f"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh",
            "aws_security_group.acesso-web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085925f297f89fce1",
            "arn": "arn:aws:ec2:us-east-1:678793045153:instance/i-0d7b760465b66fb3d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d7b760465b66fb3d",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f310e4e83ed4dfd6",
            "private_dns": "ip-172-31-52-158.ec2.internal",
            "private_ip": "172.31.52.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0310c32a29550a9c1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh",
              "acesso-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bc313d82",
            "tags": {
              "Name": "dev1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b1ee5863bd704abb",
              "sg-0ed73ba77e966e07f"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh",
            "aws_security_group.acesso-web"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085925f297f89fce1",
            "arn": "arn:aws:ec2:us-east-1:678793045153:instance/i-0cf1e660aa0336515",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cf1e660aa0336515",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0adc628c286a6515d",
            "private_dns": "ip-172-31-53-251.ec2.internal",
            "private_ip": "172.31.53.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bd65da6ae9e135d0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh",
              "acesso-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bc313d82",
            "tags": {
              "Name": "dev2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b1ee5863bd704abb",
              "sg-0ed73ba77e966e07f"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh",
            "aws_security_group.acesso-web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085925f297f89fce1",
            "arn": "arn:aws:ec2:us-east-1:678793045153:instance/i-08d07b82d0a8d9822",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08d07b82d0a8d9822",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a10202f5c010fe47",
            "private_dns": "ip-172-31-54-71.ec2.internal",
            "private_ip": "172.31.54.71",
            "public_dns": "ec2-52-91-132-175.compute-1.amazonaws.com",
            "public_ip": "52.91.132.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-002700b636db9d92e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh",
              "acesso-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bc313d82",
            "tags": {
              "Name": "dev4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b1ee5863bd704abb",
              "sg-0ed73ba77e966e07f"
            ]
          },
          "dependencies": [
            "aws_s3_bucket.dev4",
            "aws_security_group.acesso-ssh",
            "aws_security_group.acesso-web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev5",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085925f297f89fce1",
            "arn": "arn:aws:ec2:us-east-1:678793045153:instance/i-0ffc1bb2e6615ee80",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ffc1bb2e6615ee80",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f2101c3225575013",
            "private_dns": "ip-172-31-62-40.ec2.internal",
            "private_ip": "172.31.62.40",
            "public_dns": "ec2-54-227-128-30.compute-1.amazonaws.com",
            "public_ip": "54.227.128.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0dfe964a46454da63",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh",
              "acesso-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-bc313d82",
            "tags": {
              "Name": "dev5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b1ee5863bd704abb",
              "sg-0ed73ba77e966e07f"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-ssh",
            "aws_security_group.acesso-web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev6",
      "provider": "provider.aws.us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026dea5602e368e96",
            "arn": "arn:aws:ec2:us-east-2:678793045153:instance/i-02526c0eb02999dab",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02526c0eb02999dab",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0169670e9c23ae774",
            "private_dns": "ip-172-31-34-40.us-east-2.compute.internal",
            "private_ip": "172.31.34.40",
            "public_dns": "ec2-18-191-213-32.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.213.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f9f8cab617762036",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "acesso-ssh",
              "acesso-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-2b1b8667",
            "tags": {
              "Name": "dev6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c2178928099c475d",
              "sg-0da4d031b1facbedc"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.dynamodb-dev6",
            "aws_security_group.acesso-ssh-us-east-2",
            "aws_security_group.acesso-web-us-east-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:678793045153:security-group/sg-0ed73ba77e966e07f",
            "description": "acesso-ssh",
            "egress": [],
            "id": "sg-0ed73ba77e966e07f",
            "ingress": [
              {
                "cidr_blocks": [
                  "201.17.110.192/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh",
            "name_prefix": null,
            "owner_id": "678793045153",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-509d882a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh-us-east-2",
      "provider": "provider.aws.us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:678793045153:security-group/sg-0c2178928099c475d",
            "description": "acesso-ssh",
            "egress": [],
            "id": "sg-0c2178928099c475d",
            "ingress": [
              {
                "cidr_blocks": [
                  "201.17.110.192/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh",
            "name_prefix": null,
            "owner_id": "678793045153",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-c48d5aaf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:678793045153:security-group/sg-0b1ee5863bd704abb",
            "description": "acesso web a partir da instancia",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0b1ee5863bd704abb",
            "ingress": [],
            "name": "acesso-web",
            "name_prefix": null,
            "owner_id": "678793045153",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-int"
            },
            "timeouts": null,
            "vpc_id": "vpc-509d882a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-web-us-east-2",
      "provider": "provider.aws.us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:678793045153:security-group/sg-0da4d031b1facbedc",
            "description": "acesso web a partir da instancia",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0da4d031b1facbedc",
            "ingress": [],
            "name": "acesso-web",
            "name_prefix": null,
            "owner_id": "678793045153",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-int"
            },
            "timeouts": null,
            "vpc_id": "vpc-c48d5aaf"
          }
        }
      ]
    }
  ]
}